--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-404">
-				<h1>Oops!</h1>
+				<h1>Bungie!</h1>
 				<h2>404 - I want to play destiny 2</h2>
 			</div>
 			<a href="#">Go TO Homepage</a>
