--- a/index.html
+++ b/index.html
@@ -161,6 +161,162 @@ body {font-family: Arial, Helvetica, sans-serif;}
   opacity: 0.7;
 }
 
+#myImg13 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 730px;
+  top : 758px;
+}
+
+#myImg13:hover {
+  opacity: 0.7;
+}
+
+#myImg14 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 600px;
+  top : 840px;
+}
+
+#myImg14:hover {
+  opacity: 0.7;
+}
+
+#myImg15 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 750px;
+  top : 910px;
+}
+
+#myImg15:hover {
+  opacity: 0.7;
+}
+
+#myImg16 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 470px;
+  top : 920px;
+}
+
+#myImg16:hover {
+  opacity: 0.7;
+}
+
+#myImg17 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 615px;
+  top : 950px;
+}
+
+#myImg17:hover {
+  opacity: 0.7;
+}
+
+#myImg18 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 320px;
+  top : 1008px;
+}
+
+#myImg18:hover {
+  opacity: 0.7;
+}
+
+#myImg19 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 450px;
+  top : 1000px;
+}
+
+#myImg19:hover {
+  opacity: 0.7;
+}
+
+#myImg20 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 560px;
+  top : 1060px;
+}
+
+#myImg20:hover {
+  opacity: 0.7;
+}
+
+#myImg21 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 740px;
+  top : 1000px;
+}
+
+#myImg21:hover {
+  opacity: 0.7;
+}
+
+#myImg22 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 710px;
+  top : 1120px;
+}
+
+#myImg22:hover {
+  opacity: 0.7;
+}
+
+#myImg23 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 700px;
+  top : 1200px;
+}
+
+#myImg23:hover {
+  opacity: 0.7;
+}
+
+#myImg24 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  position : absolute ;
+  left : 890px;
+  top : 1150px;
+}
+
+#myImg24:hover {
+  opacity: 0.7;
+}
+
 
 .modal {
   display: none;
@@ -294,6 +450,59 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <a class="myImages" id="myImg12" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
+<!-- 중동 -->
+<a class="myImages" id="myImg12" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 춘의동 -->
+<a class="myImages" id="myImg13" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 원미동 -->
+<a class="myImages" id="myImg14" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 역곡동 -->
+<a class="myImages" id="myImg15" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 심곡동 -->
+<a class="myImages" id="myImg16" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 소사동 -->
+<a class="myImages" id="myImg17" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 송내동 -->
+<a class="myImages" id="myImg18" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 심곡본동 -->
+<a class="myImages" id="myImg19" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 소사본동 -->
+<a class="myImages" id="myImg20" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 괴안동 -->
+<a class="myImages" id="myImg21" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 범박동 -->
+<a class="myImages" id="myImg22" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 계수동 -->
+<a class="myImages" id="myImg23" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+<!-- 옥길동 -->
+<a class="myImages" id="myImg24" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+  <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
+</a>
+
 
 
 <!-- The Modal -->
