--- a/index.html
+++ b/index.html
@@ -317,6 +317,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
   opacity: 0.7;
 }
 
+#myImg0 {
+  position : absolute ;
+  left : 8px;
+  top : 0px;
+}
 
 .modal {
   display: none;
@@ -402,6 +407,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <h2>우리 동네 생태 지도</h2>
 <img src="https://obj-sg.thewiki.kr/data/ebb680ecb29cebb295eca0952e6a7067.jpg"style="width:100%;max-width:1000px">
+<img id="myImg0" src="https://i.ibb.co/q9PK3SN/101010.png" alt="1000" style="min-width:1000px;" ></a>
 <!-- 대장동 -->
 <a class="myImages" id="myImg1" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
