--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     width: 100%;
   }
 }
+
 </style>
 </head>
 <body>
@@ -449,7 +450,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 상동 -->
-<a class="myImages" id="myImg11" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg11" href="https://i.ibb.co/SBFNSSz/df5a4870-6701-4f7c-841e-4292a1c3d96b-1.png" target="_blank" >
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 중동 -->
@@ -518,11 +519,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <div id="caption"></div>
 </div>
 
-<div id="myModal" class=" modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
-</div>
 
 <script>
 // create references to the modal...
