--- a/index.html
+++ b/index.html
@@ -410,42 +410,42 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <img src="https://obj-sg.thewiki.kr/data/ebb680ecb29cebb295eca0952e6a7067.jpg"style="width:100%;max-width:1000px">
 <img id="myImg0" src="https://i.ibb.co/q9PK3SN/101010.png" alt="1000" style="min-width:1000px;" ></a>
 <!-- 대장동 -->
-<a class="myImages" id="myImg1" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg1" href="https://i.ibb.co/7KpG0Yd/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 오정동 -->
-<a class="myImages" id="myImg2" href="https://upload.wikimedia.org/wikipedia/commons/c/c4/Orange-Fruit-Pieces.jpg" target="_blank">
+<a class="myImages" id="myImg2" href="https://i.ibb.co/n6BHpcc/image.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 삼정동 -->
-<a class="myImages" id="myImg3" href="https://upload.wikimedia.org/wikipedia/commons/c/c4/Orange-Fruit-Pieces.jpg" target="_blank">
+<a class="myImages" id="myImg3" href="https://i.ibb.co/MnYGW42/image.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 내동 -->
-<a class="myImages" id="myImg4" href="https://upload.wikimedia.org/wikipedia/commons/c/c4/Orange-Fruit-Pieces.jpg" target="_blank">
+<a class="myImages" id="myImg4" href="https://i.ibb.co/RhFk42r/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 약대동 -->
+<!-- 약대동 00000 -->
 <a class="myImages" id="myImg5" href="https://upload.wikimedia.org/wikipedia/commons/c/c4/Orange-Fruit-Pieces.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 도당동 -->
+<!-- 도당동 00000 -->
 <a class="myImages" id="myImg6" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 여월동 -->
+<!-- 여월동 00000 -->
 <a class="myImages" id="myImg7" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 원종동 -->
-<a class="myImages" id="myImg8" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg8" href="https://i.ibb.co/Ss0vf0k/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 고강동 -->
-<a class="myImages" id="myImg9" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg9" href="https://i.ibb.co/Pj7gBXH/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 작동 -->
+<!-- 작동 00000 -->
 <a class="myImages" id="myImg10" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
@@ -458,55 +458,55 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 중동 -->
-<a class="myImages" id="myImg12" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg12" href="https://i.ibb.co/k3LxqdK/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 춘의동 -->
-<a class="myImages" id="myImg13" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg13" href="https://i.ibb.co/zVJj8fN/image.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 원미동 -->
-<a class="myImages" id="myImg14" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg14" href="https://i.ibb.co/Vv5gKpZ/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 역곡동 -->
+<!-- 역곡동 00000 -->
 <a class="myImages" id="myImg15" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 심곡동 -->
+<!-- 심곡동 00000 -->
 <a class="myImages" id="myImg16" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 소사동 -->
+<!-- 소사동 00000 -->
 <a class="myImages" id="myImg17" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 송내동 -->
+<!-- 송내동 00000 -->
 <a class="myImages" id="myImg18" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 심곡본동 -->
-<a class="myImages" id="myImg19" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg19" href="https://i.ibb.co/fGqFSGZ/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 소사본동 -->
-<a class="myImages" id="myImg20" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg20" href="https://i.ibb.co/82zb6jj/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 괴안동 -->
-<a class="myImages" id="myImg21" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg21" href="https://i.ibb.co/kKQYLDr/image.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 범박동 -->
+<!-- 범박동 00000 -->
 <a class="myImages" id="myImg22" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 계수동 -->
+<!-- 계수동 00000 -->
 <a class="myImages" id="myImg23" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 옥길동 -->
-<a class="myImages" id="myImg24" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<a class="myImages" id="myImg24" href="https://i.ibb.co/DWGYWyc/image.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 
