--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <a class="myImages" id="myImg22" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
-<!-- 계수동 00000 -->
-<a class="myImages" id="myImg23" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Orange-Whole-%26-Split.jpg" target="_blank">
+<!-- 계수동 -->
+<a class="myImages" id="myImg23" href="https://i.ibb.co/C6WqsvP/41294925-f25f-4a0d-b4e7-985d776bdca4-1.png" target="_blank">
   <img src="https://i.ibb.co/zx3kwGK/588891ecbc2fc2ef3a1860a4.png" alt="description" style="width:100%;max-width:50px">
 </a>
 <!-- 옥길동 -->
